--- a/WebHost/public/index.html
+++ b/WebHost/public/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GeoTag Extractor</title>
+    <title>SpaceNinjas WebServer</title>
+    <style>
+        html,
+        body,
+        #viewDiv {
+          padding: 0;
+          margin: 0;
+          height: 100%;
+          width: 100%;
+        }
+      </style>
+  
+      <link rel="stylesheet" href="https://js.arcgis.com/4.27/esri/themes/light/main.css">
+      <script src="https://js.arcgis.com/4.27/"></script>
 </head>
 <body>
     <input type="file" id="imageInput" accept="image/*">
@@ -12,7 +25,9 @@
     <br>
     <button onclick="uploadImage()">Upload and Get Geotag</button>
     <div id="result"></div>
-
+    <br>
+    <div id="photoDiv" style="width: 50%; height: 50%;"></div>
     <script src="script.js"></script>
+    
 </body>
 </html>
