--- a/PhotoGeotag/public/index.html
+++ b/PhotoGeotag/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpaceNinjas WebServer</title>
+    <title>SpaceNinjas Photo Geotagger</title>
     <style>
         html,
         body,
