Start WebAlerts app

--- a/WebAlerts/index.html
+++ b/WebAlerts/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpaceNinjas Web Alerts</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <button id="sendEnglish">EN Fire Alert</button>
+    <button id="sendFrench">FR Fire Alert</button>
+    <button id="Cree">Cree Fire Alert</button>
+    <script src="script.js"></script>
 </body>
 </html>
