--- a/PhotoGeotag/public/index.html
+++ b/PhotoGeotag/public/index.html
@@ -35,7 +35,8 @@
     <button onclick="uploadImage()">Upload and Get Geotag</button>
     <div id="result"></div>
     <br />
-    <div id="photoDiv" style="width: 50%; height: 50%"></div>
+    <h2>All Hotspots and Wildfires (FIRMS)</h2>
+    <div id="photoDiv" style="width: 75%; height: 75%"></div>
     <script src="script.js"></script>
   </body>
 </html>
