--- a/PhotoGeotag/public/index.html
+++ b/PhotoGeotag/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SpaceNinjas Photo Geotagger</title>
-    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../favicon.ico" />
     <style>
       html,
       body,
@@ -36,6 +36,7 @@
     <div id="result"></div>
     <h2>All Hotspots and Wildfires (FIRMS)</h2>
     <div id="photoDiv" style="width: 75%; height: 75%"></div>
+    <div id="tableDiv" style="width: 75%"></div>
     <script src="script.js"></script>
   </body>
 </html>
