Add Final CSV Comparison

--- a/PhotoGeotag/public/index.html
+++ b/PhotoGeotag/public/index.html
@@ -35,6 +35,7 @@
     <button onclick="uploadImage()">Upload and Get Geotag</button>
     <div id="result"></div>
     <h2>All Hotspots and Wildfires (FIRMS)</h2>
+    <b id="result2"></b>
     <div id="photoDiv" style="width: 75%; height: 75%"></div>
     <div id="tableDiv" style="width: 75%"></div>
     <script src="script.js"></script>
