--- a/PhotoGeotag/public/index.html
+++ b/PhotoGeotag/public/index.html
@@ -38,6 +38,7 @@
     <b id="result2"></b>
     <div id="photoDiv" style="width: 75%; height: 75%"></div>
     <div id="tableDiv" style="width: 75%"></div>
+    <script src="keys.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
